# proj2

./: Astar.h  BestFs.h  Bfs.h  CMakeLists.txt  CacheManager.h  ClientHandler.h  Dfs.h  FileCacheManager.h  MyClientHandler.h  MyParallelServer.cpp  MyParallelServer.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  Point.h  Searchable.h  SearchableMatrix.cpp  SearchableMatrix.h  Searcher.h  SearcherResult.h  SearcherSolver.h  Server.h  Solver.h  State.h  StringReverser.cpp  StringReverser.h  Tester.h  UpdatablePriorityQueue.h  Utils.cpp  Utils.h  log.txt  main.cpp  solution.txt
